--- a/website/src/scss/base/_reset.scss
+++ b/website/src/scss/base/_reset.scss
@@ -1,11 +1,11 @@
 :root {
-  --ifm-color-primary-lightest: #6dd0f6;
-  --ifm-color-primary-lighter: #5dbdea;
-  --ifm-color-primary-light: #4eabdd;
-  --ifm-color-primary: #3889c4;
-  --ifm-color-primary-dark: #256aac;
-  --ifm-color-primary-darker: #2855a3;
-  --ifm-color-primary-darkest: #22427a;
+  --ifm-color-primary-lightest: #92cbde;
+  --ifm-color-primary-lighter: #76c1d8;
+  --ifm-color-primary-light: #5ab6d2;
+  --ifm-color-primary: #4bb3d4;
+  --ifm-color-primary-dark: #389dac;
+  --ifm-color-primary-darker: #257c84;
+  --ifm-color-primary-darkest: #125c5c;
 }
 
 .theme-code-block-highlighted-line {
