--- a/website/src/scss/main.scss
+++ b/website/src/scss/main.scss
@@ -10,3 +10,29 @@
 @import "../components/CodeSnippet/style";
 @import "../components/Feature/style";
 @import "../components/Highlight/style";
+
+:root {
+    /*
+    See css var + hsl color palette technique:
+    https://blog.maximeheckel.com/posts/the-power-of-composition-with-css-variables/
+     */
+    --site-primary-hue-saturation: 167 68%;
+    --site-primary-hue-saturation-light: 167 56%; /* do we really need this extra one? */
+  }
+
+div[class^='announcementBar_'] {
+    --site-announcement-bar-stripe-color1: hsl(
+      var(--site-primary-hue-saturation) 85%
+    );
+    --site-announcement-bar-stripe-color2: hsl(
+      var(--site-primary-hue-saturation) 95%
+    );
+    background: repeating-linear-gradient(
+      35deg,
+      var(--site-announcement-bar-stripe-color1),
+      var(--site-announcement-bar-stripe-color1) 20px,
+      var(--site-announcement-bar-stripe-color2) 10px,
+      var(--site-announcement-bar-stripe-color2) 40px
+    );
+    font-weight: bold;
+}
