--- a/website/src/components/Banner/style.scss
+++ b/website/src/components/Banner/style.scss
@@ -61,6 +61,7 @@
   &__cta {
     display: inline-block;
     margin-top: 10px;
+    margin-right: 15px;
     padding: 12px 40px;
     border-radius: 8px;
     background-color: var(--ifm-color-primary);
@@ -78,7 +79,6 @@
   &__indexCtasGitHubButtonWrapper {
     display: flex;
     align-self: center;
-    margin-left: 40px;
   }
 
   &__indexCtasGitHubButton {
