--- a/website/src/scss/main.scss
+++ b/website/src/scss/main.scss
@@ -36,3 +36,16 @@ div[class^='announcementBar_'] {
     );
     font-weight: bold;
 }
+
+.screen-reader-only {
+  border: 0;
+  clip: rect(0 0 0 0);
+  clip-path: polygon(0 0, 0 0, 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  white-space: nowrap;
+}
